--- a/css/main.css
+++ b/css/main.css
@@ -74,18 +74,18 @@ body {
    =================== */
 
 .header-container {
-    border-bottom: 20px solid #e44d26;
+    border-bottom: 20px solid #345678;
 }
 
 .footer-container,
 .main aside {
-    border-top: 20px solid #e44d26;
+    border-top: 20px solid #345678;
 }
 
 .header-container,
 .footer-container,
 .main aside {
-    background: #f16529;
+    background: #123456;
 }
 
 .title {
